stubs for skip ad and ad countdown
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1630 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_all.html
+++ b/modules/KalturaSupport/tests/Ad_support_all.html
@@ -4,10 +4,7 @@
     "HTML Tidy for Windows (vers 14 February 2006), see www.w3.org">
 	
     <title></title>
-  <!--
- 	<script src="../../../mwEmbedLoader.js?debug=true" type="text/javascript"></script>
-  -->
-  <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script> 
+ 	<script src="../../../mwEmbedLoader.php?debug=true" type="text/javascript"></script>
   </head>
   <body>
     <h1>
@@ -43,9 +40,8 @@
       </li>
     </ul>
      <div style="float: left;">
-		<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1287083186/wid/_243342/uiconf_id/2454171/entry_id/0_uka1msg4" data="http://www.kaltura.com/index.php/kwidget/cache_st/1287083186/wid/_243342/uiconf_id/2454171/entry_id/0_uka1msg4"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1287083186/wid/_243342/uiconf_id/2454171/entry_id/0_uka1msg4" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/0_uka1msg4/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="FolgersCoffe.mpeg" /> <span property="media:width" content="400" /><span property="media:height" content="330" /> <span property="media:type" content="application/x-shockwave-flash" /> </object>
-    </div>
-    <div style="float: none; clear: both;">
+		<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1297827418/wid/_243342/uiconf_id/2454171/entry_id/1_v1z55w0b" data="http://www.kaltura.com/index.php/kwidget/cache_st/1297827418/wid/_243342/uiconf_id/2454171/entry_id/1_v1z55w0b"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1297827418/wid/_243342/uiconf_id/2454171/entry_id/1_v1z55w0b" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/1_v1z55w0b/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="sample_video_compatible.m4v" /> <span property="media:width" content="400" /><span property="media:height" content="330" /> <span property="media:type" content="application/x-shockwave-flash" /> </object>
+	<div style="float: none; clear: both;">
       <br>
       here is some html text. something between the player and the banner ad
     </div>
@@ -64,6 +60,6 @@
  		mw.setConfig( 'Kaltura.IframeRewrite', true );
  		mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
  		mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
- 	</script>
+ 	</script> 	
   </body>
 </html>
