--- a/modules/KalturaSupport/tests/FallForwardPlayer.html
+++ b/modules/KalturaSupport/tests/FallForwardPlayer.html
@@ -2,13 +2,8 @@
 <head>
 <title>Fall forward html5</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.js?debug=true>"></script>  
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true>"></script>  
 
-<!--
-<script type="text/javascript" src="http://html5.kaltura.org/js"></script>
-<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>    
-<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true>"></script>
--->
   
 <script type="text/javascript">
 	if( document.URL.indexOf('forceMobileHTML5') != -1 ){		
