fixed ResourceLoader path
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1636 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Ad_support_HTML5_Embed.html
+++ b/modules/KalturaSupport/tests/Ad_support_HTML5_Embed.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title></title>
-    <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script> 
+    <script type="text/javascript" src="../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script> 
     <!--  
     <script type="text/javascript" src="http://html5.kaltura.org/js" > </script>
     <script type="text/javascript" src="http://html5.kaltura.org/js?class=window.jQuery,mwEmbed&&debug=true" > </script>
