fixed all old references to mwEmbedLoader.js ( in favor of mwEmbedLoader.php ) don't use iframe for playlists stopgap removed dynamic players stub from loader
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1645 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/iFrameResizableTest.html
+++ b/modules/KalturaSupport/tests/iFrameResizableTest.html
@@ -30,7 +30,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.3/themes/base/jquery-ui.css" type="text/css" media="all" />
 	
-	<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
+	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 	
 	<script type="text/javascript">
 	mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
