--- a/modules/KalturaSupport/tests/integrationTests/krossoverTest.html
+++ b/modules/KalturaSupport/tests/integrationTests/krossoverTest.html
@@ -4,7 +4,7 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
-<script type="text/javascript" src="../../../../mwEmbedLoader.js"></script>
+<script type="text/javascript" src="../../../../mwEmbedLoader.php"></script>
 
 <body>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
