--- a/modules/KalturaSupport/tests/Bumper_playlist.html
+++ b/modules/KalturaSupport/tests/Bumper_playlist.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>New Video Test</title>
-<script type="text/javascript" src="../../../mwEmbedLoader.js"></script> 
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script> 
 <!-- <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script>  --> 
 </head>
 
