--- a/modules/KalturaSupport/tests/FallForwardPlaylist.html
+++ b/modules/KalturaSupport/tests/FallForwardPlaylist.html
@@ -2,7 +2,7 @@
 <head>
 <title>Fall forward html5</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>    
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>    
 <!--
 <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script>
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
