--- a/modules/KalturaSupport/tests/integrationTests/ExtIntegrationTest.html
+++ b/modules/KalturaSupport/tests/integrationTests/ExtIntegrationTest.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="http://dev.sencha.com/deploy/dev/adapter/ext/ext-base-debug.js"></script>
 <script type="text/javascript" src="http://dev.sencha.com/deploy/dev/ext-all-debug.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-<script type="text/javascript" src="../../../../mwEmbedLoader.js"></script>
+<script type="text/javascript" src="../../../../mwEmbedLoader.php"></script>
 
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );	
