--- a/modules/Playlist/tests/Player_MediaRss.html
+++ b/modules/Playlist/tests/Player_MediaRss.html
@@ -6,7 +6,7 @@
 
 <!--
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript" src="../mwEmbed/mwEmbedLoader.js"></script>
 <script type="text/javascript" src="../mwEmbed/ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true>"></script>
 <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
