fixed recived iframe messages being assigned to all players bug
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1658 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/iFrameResizableTest.html
+++ b/modules/KalturaSupport/tests/iFrameResizableTest.html
@@ -55,7 +55,7 @@
 						"id" : "vid",
 						"src" : '../../../mwEmbedFrame.php/wid/' + $('#kwidgetid').val() 
 							+ '/entry_id/' + $('#kentryid').val() + '/?debug=true' +
-							mw.getIframeHash() // add the parent domain to the frame location:  
+							mw.getIframeHash( 'iframeHolder' ) // add the parent domain to the frame location:  
 					})
 					.css({
 						'width' : '100%',
