fixed change entry id support
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1664 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -198,7 +198,7 @@
 		
 		$(function() {
 			$('#cMedia').click( function() {
-				$('#kdp3').get(0).sendNotification("changeMedia",{entryId:"1_8c3s1pvx"});
+				$('#kdp3').get(0).sendNotification("changeMedia",{entryId:"1_v1z55w0b"});
 			});
 		});
 	</script>
