--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -197,8 +197,12 @@
 		}
 		
 		$(function() {
-			$('#cMedia').click( function() {
-				$('#kdp3').get(0).sendNotification("changeMedia",{entryId:"1_v1z55w0b"});
+			$('#changeMedia').click( function() {
+			    $('#kdp3').get(0).sendNotification("changeMedia",{entryId:"1_v1z55w0b"});
+			});
+
+			$('#clearMedia').click( function() {
+			    $('#kdp3').get(0).sendNotification("cleanMedia");
 			});
 		});
 	</script>
@@ -213,7 +217,7 @@
         <div class="controls">
 			<a href="#" onclick="$('#kdp3').get(0).sendNotification('doPlay');return false;">Play</a> | <a href="#" onclick="$('#kdp3').get(0).sendNotification('doPause');return false;">Pause</a> | <a href="#" onclick="$('#kdp3').get(0).sendNotification('doStop');return false;">Stop</a> 
 			| <a href="#" onclick="alert( $('#kdp3').get(0).evaluate('{mediaProxy.entry.id}') );">Get entry id</a> | 
-			<a href="#" id="cMedia">Change Media</a> | <a href="#" onclick="alert( $('#kdp3').get(0).evaluate('{configProxy.flashvars.autoPlay}') );">Get autoplay status</a> | <a href="#" onclick="alert( $('#kdp3').get(0).evaluate('{playerStatusProxy.kdpStatus}') );">Get KDP status</a>
+			<a href="#" id="changeMedia">Change Media</a> | <a href="#" id="clearMedia">Clear Media</a> | <a href="#" onclick="alert( $('#kdp3').get(0).evaluate('{configProxy.flashvars.autoPlay}') );">Get autoplay status</a> | <a href="#" onclick="alert( $('#kdp3').get(0).evaluate('{playerStatusProxy.kdpStatus}') );">Get KDP status</a>
         </div>
         <div class="controls">
 			Seek to: <input size="4" id="seekto" value="25" type="text"><button onclick="$('#kdp3').get(0).sendNotification('doSeek', parseFloat($('#seekto').val()));return false;">Seek</button>
