--- a/modules/KalturaSupport/tests/FallForwardPlayer.html
+++ b/modules/KalturaSupport/tests/FallForwardPlayer.html
@@ -2,7 +2,7 @@
 <head>
 <title>Fall forward html5</title>
 
-<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true>"></script>  
+<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>  
 
   
 <script type="text/javascript">
