--- a/tests/test_files/canPlayType.html
+++ b/tests/test_files/canPlayType.html
@@ -3,7 +3,7 @@
   <head>
     <title>video.canPlayType testing page</title>
 
-    <script type="text/javascript" src="../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script> 
+    <script type="text/javascript" src="../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script> 
     <!--  
     <script type="text/javascript" src="http://html5.kaltura.org/js" > </script>
     <script type="text/javascript" src="http://html5.kaltura.org/js?class=window.jQuery,mwEmbed&&debug=true" > </script>
