added Mw.UserPrefrenceExpireDays for setting cookie expire defaults
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1826 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Audio.html
+++ b/modules/EmbedPlayer/tests/Player_Audio.html
@@ -9,8 +9,8 @@
 <body>
 <h3> Audio Player </h3>
 <audio class="kskin" src="http://upload.wikimedia.org/wikipedia/commons/4/4c/Faurepiece.ogg" durationHint="164"></audio>
-<!--  <h3> Audio Player mp3 </h3>
-<audio class="kskin" src="http://ia600300.us.archive.org/35/items/tube122/tube122-02-entia_non_-_perfunctory_jousting.mp3" durationHint="133"></audio>
--->
+<h3> Audio Player mp3 </h3>
+<audio src="http://ia600300.us.archive.org/35/items/tube122/tube122-02-entia_non_-_perfunctory_jousting.mp3" durationHint="133"></audio>
+
 </body>
 </html>
