--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -13,8 +13,26 @@
 	 durationHint="33"
 	 controls>
 		<source src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v">
+		<source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv" >
 
 </video>
+<script type="text/javascript">
+	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', true);
+	mw.setConfig('EmbedPlayer.OverlayControls', false);
+	mw.setConfig('EmbedPlayer.MonitorRate', 50);
 
+	mw.ready(function(){
+		var embedPlayer = $j('#vid1').get(0);
+		
+		$j( embedPlayer ).bind( 'play', function(){
+			alert('play');
+ 		});
+
+ 		$j( embedPlayer ).bind( 'pause', function(){
+ 			alert('pause');
+ 		});
+ 		
+	});
+</script>
 </body>
 </html>
