* don't cache iframe results when in debug mode and always get a fresh result from the api * console log cleanup * fixed issue of non-default iframe configuration being passed to iframe * added iPadNativeControls example
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1877 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/PlaylistFallForward.html
+++ b/modules/KalturaSupport/tests/PlaylistFallForward.html
@@ -9,15 +9,9 @@
 <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
 -->
   
-<script type="text/javascript">
-	if( document.URL.indexOf('forceMobileHTML5') != -1 ){		
-		mw.setConfig( 'forceMobileHTML5' , true );
-	}
-
-</script>
 </head>
 <body>
-<h2> Fall forward: ( kaltura embed code on iPad / iPhone ) + analytics </h2>
+<h2> Fall forward playlist </h2>
 <a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 <br />
 
