Added google analytics example Updated KDP mapping to support more analytic events Synced html5 library with flash listener response
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1904 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -104,6 +104,9 @@
 			$.each( notificationslist, function(inx, fName){
 				if (fName != 'playerUpdatePlayhead') {
 					window[ fName + "Handler2" ] = function(data, id){
+						if( fName == 'playerSeekEnd' ){
+							debugger;
+						}
 						if ($("#stopListeners").attr("checked") == false) {
 							$("#notifications").text( $("#notifications").text() + fName + ': ');
 							printobj(data);
