--- a/modules/KalturaSupport/tests/googleAnalytics/gAnalytics.html
+++ b/modules/KalturaSupport/tests/googleAnalytics/gAnalytics.html
@@ -10,18 +10,14 @@
 </script>
 <script type="text/javascript" src="kGoogleAnalytics.js"></script>
 <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-22997990-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
+<script type="text/javascript">
+try{
+var pageTracker = _gat._getTracker("UA-22997990-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 <script type="text/javascript">
 	// once the player can accept events: 
 	function jsCallbackReady(){
@@ -36,7 +32,7 @@
 			'playerElement' : $('#kaltura_player').get(0), 
 			
 			// pageTracker object ( if set to null async tracking is used via window._gaq.push calls )
-			'googlePageTracker': null,
+			'googlePageTracker': pageTracker,
 			
 			// An optional event callback to be used to monitor what events are being sent to google via _trackEvent calls
 			'trackEventMonitor' : function( category, action, opt_label, opt_value ){
