adds support for flashembed to the mwEmbedLoader adds a 'flashembed_BestPractice' example page
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1909 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/googleAnalytics/gAnalytics.html
+++ b/modules/KalturaSupport/tests/googleAnalytics/gAnalytics.html
@@ -10,14 +10,18 @@
 </script>
 <script type="text/javascript" src="kGoogleAnalytics.js"></script>
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-2078931-10']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
-<script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-22997990-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
 <script type="text/javascript">
 	// once the player can accept events: 
 	function jsCallbackReady(){
@@ -31,8 +35,8 @@ pageTracker._trackPageview();
 			// The player object to add bindings too:
 			'playerElement' : $('#kaltura_player').get(0), 
 			
-			// pageTracker object ( if set to null async tracking is used via window._gaq.push calls )
-			'googlePageTracker': pageTracker,
+			// pageTracker object ( if set to null async tracking is used via _gaq.push calls )
+			'googlePageTracker': null,
 			
 			// An optional event callback to be used to monitor what events are being sent to google via _trackEvent calls
 			'trackEventMonitor' : function( category, action, opt_label, opt_value ){
@@ -88,4 +92,3 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1274763304/wid/_243342/u
 
 </body>
 </html>
-
