fixed showError message for no source video found. fixed getSources error, to \n string  instead of returning an array in exception added exception handling to getVideoHTML in kaltura iframe include Kaltura.LoadScriptForVideoTags configuration option by default
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1915 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/googleAnalytics/gAnalytics.html
+++ b/modules/KalturaSupport/tests/googleAnalytics/gAnalytics.html
@@ -27,7 +27,7 @@
 	function jsCallbackReady(){
 		new kGoogleAnalytics({
 			// List of kaltura events to track 
-			// Full list of notifications avaliable here: 
+			// Full list of notifications available here: 
 			// http://www.kaltura.org/demos/kdp3/docs.html#notifications
 			// For default list of events do not set this property 
 			'eventTrackList' : null,
