--- a/tests/test_files/mwEmbed_HTML5.html
+++ b/tests/test_files/mwEmbed_HTML5.html
@@ -31,8 +31,8 @@
  		    poster="http://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Elephants_Dream.ogg/seek%3D13-Elephants_Dream.ogg.jpg"
  		    duration="10:53" 
  		    linkback="http://www.elephantsdream.org/" > 		
-	      <source type="video/webm" src="media/out500.webm" >
-	      <source type="video/ogg" src="media/out500.ogv" >
+	      <source type="video/h264" src="http://www.archive.org/download/ElephantsDream/ed_1024_512kb.mp4" >
+	      <source type="video/ogg" src="http://www.archive.org/download/ElephantsDream/ed_hd.ogv" >
 	
           <!--  Subtitles -->
           <track kind="subtitles" id="video_af" srclang="af" 
