Updating to ResourceLoader
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1920 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Native_Bindings.html
+++ b/modules/EmbedPlayer/tests/Player_Native_Bindings.html
@@ -33,9 +33,8 @@
 <div style="width:500px;height:300px;display:block;position:relative">
  <video id="myVid" poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream.jpg"	
 		 duration="10:53" preload="auto" controls>
-	  <source type="video/webm" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_400p.webm" />
-	  <source type="video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_iphone.m4v" />
-	  <source type="video/ogg" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_400p.ogv" />
+	   <source type="video/h264" src="http://www.archive.org/download/ElephantsDream/ed_1024_512kb.mp4" >
+	   <source type="video/ogg" src="http://www.archive.org/download/ElephantsDream/ed_hd.ogv" >
 	</video>
 </div>
 
@@ -43,7 +42,7 @@
 
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script>
 <script type="text/javascript">
   /* 
     Media Event Bindings
