--- a/modules/KalturaSupport/tests/integrationTests/benelliusa_full.html
+++ b/modules/KalturaSupport/tests/integrationTests/benelliusa_full.html
@@ -525,7 +525,7 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 					<div style="float: right;"> 
 					
 					
-<script src="http://html5.kaltura.org/js" <http://html5.kaltur.org/js> Êtype="text/javascript"></script> 
+<script src="http://html5.kaltura.org/js" type="text/javascript"></script> 
 <script type="text/javascript"> 
 mw.setConfig('EmbedPlayer.EnableIframeApi', false );
 </script> 
