* removed javascript alerts from Embed Player Sources Test HTML file * switched to Embed Player Sources file as basis for Embed Player Loads Test
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1927 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -25,11 +25,11 @@
 		var embedPlayer = $j('#vid1').get(0);
 		
 		$j( embedPlayer ).bind( 'play', function(){
-			alert('play');
+			//alert('play');
  		});
 
  		$j( embedPlayer ).bind( 'pause', function(){
- 			alert('pause');
+ 			//alert('pause');
  		});
  		
 	});
