updating to mwEmbedLoader.php
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1930 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -3,19 +3,18 @@
 <head>
 <title>Player sources</title>
 
-<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 </head>
 <body>
-
 
 <video id="vid1" width="480" height="267"
 	 poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
 	 durationHint="33"
 	 controls>
-		<source src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v">
+		<source "video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v">
 		<source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv" >
-
 </video>
+
 <script type="text/javascript">
 	mw.setConfig('EmbedPlayer.EnableIpadHTMLControls', true);
 	mw.setConfig('EmbedPlayer.OverlayControls', false);
@@ -25,11 +24,11 @@
 		var embedPlayer = $j('#vid1').get(0);
 		
 		$j( embedPlayer ).bind( 'play', function(){
-			//alert('play');
+			alert('play');
  		});
 
  		$j( embedPlayer ).bind( 'pause', function(){
- 			//alert('pause');
+ 			alert('pause');
  		});
  		
 	});
