--- a/tests/qunit-tests/EmbedPlayerLoads.html
+++ b/tests/qunit-tests/EmbedPlayerLoads.html
@@ -1,19 +1,37 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
                     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
+  
 <head>
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
+
   <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
+
+  <script src="../../mwEmbedLoader.php"></script>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
   <script type="text/javascript" src="http://staging.html5video.org/testswarm/js/inject.js"></script>
 
+</head>
+
+<body>
+
+  <video id="vid1" width="480" height="267"
+     poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
+     durationHint="33"
+     controls>
+      <source "video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v">
+      <source type="video/ogg" src="http://www.linkto.tv/test/big_buck_bunny.ogv" >
+  </video>
+
+  <h1 id="qunit-header">QUnit example</h1>
+  <h2 id="qunit-banner"></h2>
+  <div id="qunit-testrunner-toolbar"></div>
+  <h2 id="qunit-userAgent"></h2>
+  <ol id="qunit-tests"></ol>
+  <div id="qunit-fixture">test markup, will be hidden</div>
+
   <script>
   
-  var $$ = jQuery.noConflict(true);
-  var $ = jQuery = null; //we will be using the normal jquery vars soon 
-    
-  var testLocation = "../../modules/EmbedPlayer/tests/Player_Sources.html";
-
   var playbackStarted = false;
 
   function runTests() {
@@ -42,32 +60,11 @@
       setTimeout( hasPlaybackStarted, 5000 );
   }
 
-  $$(document).ready(function(){
-
-    $$('#testFrame').load(function () {
-      //grab jQuery from inside the document - I don't 
-      $ = jQuery = window.frames[0].$j;
-    });
-
-
-    $$('#testFrame').attr('src', testLocation)
-
+  $(document).ready(function(){
     // wait 10 seconds
     setTimeout( runTests, 10000 );
   });
 
   </script>
-  
-</head>
-<body>
-  <h1 id="qunit-header">QUnit example</h1>
- <h2 id="qunit-banner"></h2>
- <div id="qunit-testrunner-toolbar"></div>
- <h2 id="qunit-userAgent"></h2>
- <ol id="qunit-tests"></ol>
- <div id="qunit-fixture">test markup, will be hidden</div>
-<div style="float: left"> 
-        <iframe height="700" width="1000" id="testFrame"></iframe> 
-</div> 
 </body>
 </html>
