--- a/modules/KalturaSupport/tests/googleAnalytics/gAnalytics.html
+++ b/modules/KalturaSupport/tests/googleAnalytics/gAnalytics.html
@@ -4,11 +4,12 @@
 <title>Fall forward html5</title>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+<script src="http://cdn.kaltura.org/apis/seo/flashembed.js"></script>
 <script type="text/javascript" src="../../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">
 	mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
 </script>
-<script type="text/javascript" src="kGoogleAnalytics.js"></script>
+<script type="text/javascript" src="kGoogleAnalytics.js?4"></script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -51,6 +52,28 @@
 			}
 		});
 	};
+</script>
+<script type="text/javascript">
+		flashembed(this.placeholder_id,
+				{	// attributes and params:
+					id :				"kaltura_player",
+					src : 				"http://www.kaltura.com/index.php/kwidget/wid/_243342/uiconf_id/" +
+											"48501/entry_id/0_swup5zao",
+					height :			330,
+					width :				400,
+					bgcolor :			"#000000",
+					allowNetworking : 	"all",
+					version :			[10,0],
+//					onFail :			do something,
+					expressInstall :	"http://cdn.kaltura.org/apis/seo/expressinstall.swf"
+				},
+				{	// flashvars:
+					// The following enables KDP's JavaScript API (the "external interface" is
+					// disabled by default):
+					externalInterfaceDisabled : "false"
+					// "false" must be double-quoted, all other values don't have to be
+				}
+		)
 </script>
 </head>
 <body>
